Killed the min-height and animated the margin/padding that was making the 'Remove' animation jumpy. Fixes #26.

--- a/css/attachments.css
+++ b/css/attachments.css
@@ -8,6 +8,7 @@ a.attachments-invoke {
     padding:5px 0 25px;
     border-bottom:1px solid #e7e7e7;
     min-height:125px;
+    overflow:hidden;
 }
 
 .attachments-attachment:before,
